Feature/Rabbit-MQ-Finished

--- a/CRM.EventStore.Api/appsettings.Development.json
+++ b/CRM.EventStore.Api/appsettings.Development.json
@@ -13,7 +13,11 @@
         "HostName": "localhost",
         "UserName": "guest",
         "Password": "guest",
-        "VirtualHost": "/"
+        "VirtualHost": "/",
+        "Port": 5672,
+        "ExchangeName": "event_exchange",
+        "QueueName": "event_store_queue",
+        "RoutingKeyPattern": "events.#"
     },
     "JwtOptions": {
         "Issuer": "CRM.Identity",
